--- a/BackChannel/app/views/categories/_form.html.erb
+++ b/BackChannel/app/views/categories/_form.html.erb
@@ -18,4 +18,8 @@
   <div class="actions">
     <%= f.submit %>
   </div>
+
+    <p>
+      <%= link_to "Show all categories", categories_path %>
+    </p>
 <% end %>
