--- a/BackChannel/app/views/users/_form.html.erb
+++ b/BackChannel/app/views/users/_form.html.erb
@@ -17,11 +17,8 @@
   </div>
   <div class="field">
     <%= f.label :password %><br />
-    <%= f.text_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :admin_flag %><br />
-    <%= f.text_field :admin_flag %>
+    <%= f.password_field :password %>
+
   </div>
   <div class="actions">
     <%= f.submit %>
