--- a/BackChannel/app/views/users/index.html.erb
+++ b/BackChannel/app/views/users/index.html.erb
@@ -4,7 +4,6 @@
   <tr>
     <th>Username</th>
     <th>Password</th>
-    <th>Admin flag</th>
     <th></th>
     <th></th>
     <th></th>
@@ -13,8 +12,13 @@
 <% @users.each do |user| %>
   <tr>
     <td><%= user.username %></td>
-    <td><%= user.password %></td>
-    <td><%= user.admin_flag %></td>
+    <td><%= password = ""
+      i=0
+      until i==user.password.size
+      password << "*"
+      i += 1
+      end
+      password %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -24,4 +28,6 @@
 
 <br />
 
-<%= link_to 'New User', new_user_path %>
+<!--
+    <%= link_to 'New User', new_user_path %>
+--->
