--- a/BackChannel/app/views/posts/show.html.erb
+++ b/BackChannel/app/views/posts/show.html.erb
@@ -5,15 +5,19 @@
   <%= @post.content %>
 </p>
 
-<% @comments.each do |comment| %>
-    <tr>
-      <td><%= comment.content %></td>
-      <td><%= link_to 'Show', comment %></td>
-      <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-      <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-<% end %>
+<p>
+  Comments :
+  <%= Comment.find_all_by_post_id(@post.id) %>
+</p>
 
+<p>
+  No of votes :
+  <%= Vote.count_by_sql "select count(*) from votes where post_id='" +@post.id.to_s + "'" %>
+</p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
+<p>
+  <%= render 'votes/form' %>
+</p>
+
+<%= link_to 'Edit', edit_post_path(@post) %>
 <%= link_to 'Back', posts_path %>
