--- a/BackChannel/app/views/home/index.html.erb
+++ b/BackChannel/app/views/home/index.html.erb
@@ -1,27 +1,9 @@
 <h1>Home Page</h1>
 <table>
-    <tr>
-      <td>
-        <form>
-          User Name: <input type="text" name="username" /><br />
-          Password: <input type="password" name="password" />
-        </form>
-
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <input
-            type="submit"
-            class="g-button g-button-submit"
-            name="Log In"
-            id="LogIn"
-            value="Log In"
-        />
-      </td>
-      </tr>
+ <h1>Hi Welcome to BackChannel... !!! </h1>
   <tr>
     <td>
+      <%= link_to 'Login', login_path %>
       <%= link_to 'Sign Up', new_user_path %>
     </td>
     </tr>
