--- a/BackChannel/app/views/posts/_form.html.erb
+++ b/BackChannel/app/views/posts/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :category %><br />
-    <%= select("post", "category_id", Category.find(:all).collect{ |c| [ c.name, c.id] }) %>
+    <%= select("post", "category_id", Category.all.collect{ |c| [ c.name, c.id] }) %>
   </div>
   <div class="actions">
     <%= f.submit %>
