--- a/BackChannel/app/views/users/index.html.erb
+++ b/BackChannel/app/views/users/index.html.erb
@@ -12,13 +12,7 @@
 <% @users.each do |user| %>
   <tr>
     <td><%= user.username %></td>
-    <td><%= password = ""
-      i=0
-      until i==user.password.size
-      password << "*"
-      i += 1
-      end
-      password %></td>
+    <td><%= user.email %> </td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
