--- a/BackChannel/app/views/home/index.html.erb
+++ b/BackChannel/app/views/home/index.html.erb
@@ -1,12 +1,6 @@
-<h1>Home Page</h1>
+<div class="notice"><%= notice %></div>
 <table>
- <h1>Hi Welcome to BackChannel... !!! </h1>
-  <tr>
-    <td>
-      <%= link_to 'Login', login_path %>
-      <%= link_to 'Sign Up', new_user_path %>
-    </td>
-    </tr>
+ <h1 style="text-align: center;">Hi Welcome to BackChannel... !!! </h1>
 </table>
 
 
