--- a/BackChannel/app/views/posts/index.html.erb
+++ b/BackChannel/app/views/posts/index.html.erb
@@ -1,33 +1,36 @@
-<h1>Listing posts</h1>
 
-<table>
-  <tr>
-    <th>Content</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+
+<div class="notice" style="color:#8b0000;margin-left:20px;"><%= notice %></div>
+<div style="width:100%;">
+  <h1 style="text-align: center">Welcome to Backchannel application.</h1>
+  <br><br><br>
+<div style="float:left; width:20%;">
+      <!-- Set Div As your requirement -->
+</div>
+<div style="float:right; width:80%; margin-left:10px; border-left: 2px solid #008b8b; padding: 10px;">
+      <h3>Posts from everyone</h3> <br>
 
 <% @posts.each do |post| %>
-  <tr>
-    <td><%= post.content %></td>
-    <td>Number of Comments:
-      <%= no_of_comments = Comment.count_by_sql("select count(*) from comments where post_id='" +post.id.to_s + "'")
-          no_of_comments.to_s
-      %>
-    </td>
-    <td>Number of Votes:
-      <%= no_of_votes = Vote.count_by_sql("select count(*) from votes where post_id='" +post.id.to_s + "'")
-          no_of_votes.to_s
-      %>
-    </td>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+      <div style="font-size: 30px;"><%= post.content %></div>  <br>
+      <table>
+        <tr>
+          <td><%= no_of_comments = Comment.count_by_sql("select count(*) from comments where post_id='" +post.id.to_s + "'")
+                  no_of_comments.to_s %> comments
+          </td>
+          <td>
+            <%= no_of_votes = Vote.count_by_sql("select count(*) from votes where post_id='" +post.id.to_s + "'")
+                no_of_votes.to_s %> votes
+          </td>
+        </tr>
+        <tr>
+          <td><%= link_to 'Show', post %></td>
+          <td><%= link_to 'Edit', edit_post_path(post) %></td>
+          <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      </table>
+      <br>
+    <% end %>
+    <%= link_to 'New Post', new_post_path %>
+  </div>
+</div>
 
-<br />
-
-<%= link_to 'New Post', new_post_path %>
