Lot of changes...added search functionality, admin helper methods.. improved css

--- a/BackChannel/app/views/layouts/application.html.erb
+++ b/BackChannel/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <%= link_to "Register", new_user_path %> |
       <%= link_to "Login", login_path %>
   <% end %>
+  <%= link_to 'Search', new_search_path %>
 </div>
 <%= yield %>
 
