--- a/BackChannel/app/views/posts/index.html.erb
+++ b/BackChannel/app/views/posts/index.html.erb
@@ -8,10 +8,10 @@
       <!-- Set Div As your requirement -->
 </div>
 <div style="float:right; width:80%; margin-left:10px; border-left: 2px solid #008b8b; padding: 10px;">
-      <h3>Posts from everyone</h3> <br>
+      <h3>Posts from everyone: </h3><br>
 
-<% @posts.each do |post| %>
-      <div style="font-size: 30px;"><%= post.content %>&nbsp;&nbsp;<i>by <%= post.user_id %></div>  <br>
+  <% @posts.each do |post| %>
+      <div style="font-size: 30px;"><%= post.content %>&nbsp;&nbsp;<i>by <%= post.user.username %></div>  <br>
       <table>
         <tr>
           <td><%= no_of_comments = Comment.count_by_sql("select count(*) from comments where post_id='" +post.id.to_s + "'")
