--- a/BackChannel/app/views/users/new.html.erb
+++ b/BackChannel/app/views/users/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New user</h1>
-
 <%= render 'form' %>
-
+<div style="text-align: center; margin-top: 20px;">
 <%= link_to 'Back', users_path %>
+</div>
