Adding some admin functionality

--- a/BackChannel/app/views/admin/index.html.erb
+++ b/BackChannel/app/views/admin/index.html.erb
@@ -1,1 +1,13 @@
-<h1>ADMIN PAGE</h1>
+<h1>ADMIN OPTIONS</h1>
+<br><br>
+
+<td><%= link_to 'Manage Users', users_path %></td>
+
+<br><br>
+
+<td><%= link_to 'Manage Categories', categories_path %></td>
+
+<br><br>
+
+<td><%= link_to 'Manage Posts / Comments', posts_path %></td>
+
