--- a/BackChannel/app/views/users/index.html.erb
+++ b/BackChannel/app/views/users/index.html.erb
@@ -1,14 +1,14 @@
 <h1>Listing users</h1>
 
-<table>
+<table width = "400">
   <tr>
-    <th>Username</th>
-    <th>Password</th>
+    <th style="text-align: left;">Username</th>
+    <th style="text-align: left;">Password</th>
     <th></th>
     <th></th>
     <th></th>
   </tr>
-
+  <tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr>
 <% @users.each do |user| %>
   <tr>
     <td><%= user.username %></td>
@@ -17,11 +17,14 @@
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
+      <tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr>
 <% end %>
 </table>
 
 <br />
 
+<%= link_to 'Back to Admin Tools', admin_path %>
 <!--
     <%= link_to 'New User', new_user_path %>
+
 --->
