--- a/BackChannel/app/views/posts/index.html.erb
+++ b/BackChannel/app/views/posts/index.html.erb
@@ -14,7 +14,7 @@
       <div style="font-size: 30px;"><%= post.content %>&nbsp;&nbsp;<i>by <%= post.user.username %></div>  <br>
       <table>
         <% if admin_user? %>
-            <% post.comments.reverse.each do |comment| %>
+            <% post.comments.each do |comment| %>
                 <tr>
                   <td>
                     <div style="margin-left: 30px; margin-bottom: 15px;"><%= comment.content %> <i>by <%= comment.user.username %></i> </div>
@@ -31,7 +31,7 @@
         <% unless admin_user? %>
         <tr>
               <td><%= no_of_comments = Comment.count_by_sql("select count(*) from comments where post_id='" +post.id.to_s + "'")
-                      no_of_comments.to_s %> comments
+                      no_of_comments.to_s %> comments,
               </td>
               <td>
                 <%= no_of_votes = Vote.count_by_sql("select count(*) from votes where post_id='" +post.id.to_s + "'")
@@ -39,12 +39,18 @@
               </td>
         </tr>
         <% end %>
+        <tr>&nbsp;</tr> <tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr><tr>&nbsp;</tr>
         <tr>
           <% unless admin_user? %>
-              <td><%= link_to 'Show', post %></td>
-              <td><%= link_to 'Edit', edit_post_path(post) %></td>
+              <td><%= link_to 'Show Post', post %></td>
+              <% unless current_user.id != post.user_id %>
+                <td><%= link_to 'Edit Post', edit_post_path(post) %></td>
+              <% end %>
+              <td>&nbsp;&nbsp;</td>
           <% end %>
-          <td><%= link_to 'Delete Post', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% if current_user.id == post.user_id || admin_user?%>
+              <td><%= link_to 'Delete Post', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
         </tr>
       </table>
       <br>
