--- a/BackChannel/app/views/posts/show.html.erb
+++ b/BackChannel/app/views/posts/show.html.erb
@@ -29,7 +29,9 @@
       </td>
       <td>
         &nbsp;&nbsp;&nbsp;
-        <%= link_to 'Vote', :controller => "votes", :action => "new", :post_id => @post.id %>
+        <% unless current_user.id == @post.user_id %>
+            <%= link_to 'Vote', :controller => "votes", :action => "new", :post_id => @post.id %>
+        <% end %>
       </td>
     </tr>
   </table>
@@ -41,10 +43,10 @@
       <tr>
         <td>
           <table>
-          <% @post.comments.reverse.each do |comment| %>
+          <% @post.comments.each do |comment| %>
                 <tr>
                   <td>
-                    <div style="margin-left: 30px; margin-bottom: 15px;"><%= comment.content %> <i>by <%= comment.user.username %></i> </div>
+                    <div style="margin-bottom: 15px;"><%= comment.content %> <i>by <%= comment.user.username %></i> </div>
                   </td>
                   <td>
                     <!--%=
@@ -68,14 +70,32 @@
                            % -->
                   </td>
                   <td>
-                    <div style="margin-bottom: 15px;"><%= link_to 'Vote', :controller => "votes", :action => "new", :comment_id => comment.id %></div>
+                    <% unless current_user.id == comment.user_id %>
+                        <div style="margin-bottom: 15px;"><%= link_to 'Vote', :controller => "votes", :action => "new", :comment_id => comment.id %></div>
+                    <% end %>
                   </td>
                 </tr>
+                <tr>
+                      <% unless current_user.id != comment.user_id %>
+                      <div style = "margin-left: 30px;">
+                        <table>
+                          <tr>
+                            <td><%= link_to 'Edit Comment', edit_post_comment_path(comment) %></td>
+                            <td>&nbsp;&nbsp;</td>
+                            <td><%= link_to 'Delete Comment', [comment.post, comment], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                          </tr>
+                        </table>
+                      </div>
+                      <% end %>
+                </tr>
+                <tr>&nbsp;&nbsp;</tr> <tr>&nbsp;&nbsp;</tr> <tr>&nbsp;&nbsp;</tr> <tr>&nbsp;&nbsp;</tr>
           <% end %>
           </table>
+          <br>
         </td>
       </tr>
       <tr>
+      <% unless current_user.id == @post.user_id %>
       <%= form_for([@post, @post.comments.build]) do |f| %>
               <td>
                 <div style="margin-left: 25px;" class="field">
@@ -87,15 +107,18 @@
                   <%= f.submit %>
                 </div>
               </td>
-            </tr>
+        <% end %>
+       </tr>
+        <% end %>
       </table>
-      <% end %>
     </div>
 </div>
 <br>
 
 <div>
-  <%= link_to 'Edit', edit_post_path(@post) %>
-  <%= link_to 'Back', posts_path %>
+  <% unless current_user.id == @post.user_id %>
+    <%= link_to 'Edit Post', edit_post_path(@post) %>
+  <% end %>
+  <%= link_to 'Back to all Posts', posts_path %>
 </div>
 
