--- a/BackChannel/app/views/comments/_form.html.erb
+++ b/BackChannel/app/views/comments/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@edit_post_comment) do |f| %>
-  <% if @edit_post_comment.errors.any? %>
+<%= form_for(@comment) do |f| %>
+  <% if @comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
 
       <ul>
-      <% @edit_post_comment.errors.full_messages.each do |msg| %>
+      <% @comment.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
