--- a/BackChannel/app/views/comments/show.html.erb
+++ b/BackChannel/app/views/comments/show.html.erb
@@ -7,4 +7,4 @@
 
 
 <%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', comments_path %>
+<%= link_to 'Back to Posts', posts_path %>
