Comment-edit comment now working.

--- a/BackChannel/app/views/posts/show.html.erb
+++ b/BackChannel/app/views/posts/show.html.erb
@@ -8,28 +8,28 @@
      </td>
      <td>
         <%=
-            voters = Vote.find_by_sql("select user_id, username from votes join users where votes.user_id = users.id and votes.post_id= " + @post.id.to_s)
+            voters_post = Vote.find_by_sql("select user_id, username from votes join users where votes.user_id = users.id and votes.post_id= " + @post.id.to_s)
 
-            has_current_user_voted = false
-            voters.each do |voter|
-              if voter[:user_id] == return_current_user
+            has_current_user_voted_post = false
+            voters_post.each do |voter|
+              if voter[:user_id] == current_user.id
                 puts voter[:user_id]
-                has_current_user_voted = true
+                has_current_user_voted_post = true
               end
             end
 
             return_string = ""
-            if has_current_user_voted == false
-              return_string = voters.size.to_s + " users have voted for this post"
+            if has_current_user_voted_post == false
+              return_string = voters_post.size.to_s + " users have voted for this post"
             elsif
-            return_string = "You and " + (voters.size - 1).to_s + " users have voted for this post"
+            return_string = "You and " + (voters_post.size - 1).to_s + " users have voted for this post"
             end
             return_string
         %>
       </td>
       <td>
         &nbsp;&nbsp;&nbsp;
-        <% unless current_user.id == @post.user_id %>
+        <% unless current_user.id == @post.user_id || has_current_user_voted_post %>
             <%= link_to 'Vote', :controller => "votes", :action => "new", :post_id => @post.id %>
         <% end %>
       </td>
@@ -48,29 +48,34 @@
                   <td>
                     <div style="margin-bottom: 15px;"><%= comment.content %> <i>by <%= comment.user.username %></i> </div>
                   </td>
+                  <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                   <td>
-                    <!--%=
-                    voters = Vote.find_by_sql("select user_id, username from votes join users where votes.user_id = users.id and votes.comment_id= " + @post.id.to_s)
+                    <div style="margin-bottom: 15px;">
+                    <%=
+                    voters_comment = Vote.find_by_sql("select user_id, username from votes join users where votes.user_id = users.id and votes.comment_id= " + comment.id.to_s)
 
-                    has_current_user_voted = false
-                    voters.each do |voter|
-                    if voter[:user_id] == return_current_user
+                    has_current_user_voted_comment = false
+                    voters_comment.each do |voter|
+                    if voter[:user_id] == current_user.id
                         puts voter[:user_id]
-                     has_current_user_voted = true
+                        has_current_user_voted_comment = true
                     end
                    end
 
                     return_string = ""
-                    if has_current_user_voted == false
-                   return_string = voters.size.to_s + " users have voted for this post"
+                    if has_current_user_voted_comment == false
+                   return_string = voters_comment.size.to_s + " users have voted for this post"
                      elsif
-                  return_string = "You and " + (voters.size - 1).to_s + " users have voted for this post"
+                  return_string = "You and " + (voters_comment.size - 1).to_s + " users have voted for this post"
                      end
                   return_string
-                           % -->
+                           %>
+                      <%= link_to 'See here', show_others_path(:user_list =>voters_comment) %>
+                    </div>
                   </td>
+                  <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                   <td>
-                    <% unless current_user.id == comment.user_id %>
+                    <% unless current_user.id == comment.user_id || has_current_user_voted_comment %>
                         <div style="margin-bottom: 15px;"><%= link_to 'Vote', :controller => "votes", :action => "new", :comment_id => comment.id %></div>
                     <% end %>
                   </td>
@@ -95,7 +100,6 @@
         </td>
       </tr>
       <tr>
-      <% unless current_user.id == @post.user_id %>
       <%= form_for([@post, @post.comments.build]) do |f| %>
               <td>
                 <div style="margin-left: 25px;" class="field">
@@ -109,7 +113,6 @@
               </td>
         <% end %>
        </tr>
-        <% end %>
       </table>
     </div>
 </div>
