--- a/BackChannel/app/views/layouts/application.html.erb
+++ b/BackChannel/app/views/layouts/application.html.erb
@@ -22,6 +22,10 @@
   <% end %>
   <%= link_to 'Search', new_search_path %>
 </div>
+<div style="text-align: center; width: 1250px; margin-top: 70px;"><h1>BackChannel Application</h1>
+
+</div>
+
 <%= yield %>
 
 </body>
