--- a/BackChannel/app/views/posts/show.html.erb
+++ b/BackChannel/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<div style="text-align: center;">
+<div style="text-align: center; margin-top: 100px;">
   <table>
     <tr>
      <td>
@@ -45,6 +45,7 @@
 <br>
 <div>
     <div style="border: 1px">
+      Comments:
     <table>
       <tr>
         <td>
@@ -131,7 +132,7 @@
 <br>
 
 <div>
-  <% unless current_user.id == @post.user_id %>
+  <% unless current_user.id != @post.user_id %>
     <%= link_to 'Edit Post', edit_post_path(@post) %>
   <% end %>
   <%= link_to 'Back to all Posts', posts_path %>
