--- a/BackChannel/app/views/users/_form.html.erb
+++ b/BackChannel/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<div style="margin-top: 20px;margin-left: 680px;">
+<div style="margin-left: 680px;">
   <%= form_for(@user) do |f| %>
       <% if @user.errors.any? %>
           <div id="error_explanation">
