--- a/BackChannel/app/views/users/new.html.erb
+++ b/BackChannel/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
 <%= render 'form' %>
-<div style="text-align: center; margin-top: 20px;">
+<div style="text-align: center;">
 <%= link_to 'Back', users_path %>
 </div>
