--- a/BackChannel/app/views/reports/index.html.erb
+++ b/BackChannel/app/views/reports/index.html.erb
@@ -1,9 +1,9 @@
 <br><br><br>
-<h1>User Activity Report</h1>
-
-<table border="1">
+<div style="margin-left: 350px;">
+  <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;User Activity Report</h1>
+  <table border="1">
     <tr>
-      <td>
+      <td width=150px>
         User Name
       </td>
       <td>
@@ -17,14 +17,21 @@
       </td>
     </tr>
     <% @all_users_for_report.each do |user_for_report| %>
-    <tr>
-        <td><%= user_for_report.username %></td>
-        <td><%= number_of_posts_per_user(user_for_report.id) %></td>
-        <td><%= number_of_comments_per_user(user_for_report.id) %></td>
-        <td><%= number_of_votes_per_user(user_for_report.id) %></td>
-    </tr>
+        <tr>
+          <td><%= user_for_report.username %></td>
+          <td align="center"><%= number_of_posts_per_user(user_for_report.id) %></td>
+          <td align="center"><%= number_of_comments_per_user(user_for_report.id) %></td>
+          <td align="center"><%= number_of_votes_per_user(user_for_report.id) %></td>
+        </tr>
     <% end %>
-</table>
+  </table>
+  <br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  &nbsp;&nbsp;&nbsp;&nbsp;
+  <%= link_to 'Back to Admin Tools', admin_path %>
+</div>
+<br><br>
 
-<%= link_to 'Back to Admin Tools', admin_path %>
 
