Look and feel changes

--- a/BackChannel/app/views/home/index.html.erb
+++ b/BackChannel/app/views/home/index.html.erb
@@ -1,4 +1,6 @@
-<div class="notice"><%= notice %></div>
+<!-- Flash Notice -->
+<div class="notice" style="color:#8b0000; text-align: center;"><%= notice %></div>
+
 <table>
   <br><br><br><br><br><br>
   <br><br><br>
