--- a/BackChannel/app/views/posts/index.html.erb
+++ b/BackChannel/app/views/posts/index.html.erb
@@ -1,10 +1,10 @@
 
 
-<div class="notice" style="color:#8b0000;margin-left:20px;"><%= notice %></div>
+<!-- Flash Notice -->
+<div class="notice" style="color:#8b0000; text-align: center;"><%= notice %></div>
+
 <div style="width:100%;">
-<div style="float:left; width:5%;">
-      <!-- Set Div As your requirement -->
-</div>
+    <div style="float:left; width:5%;"></div>
 <div style="float:right; width:95%; border-left: 2px #008b8b; padding: 10px;">
       <h3>Posts from everyone: </h3><br>
 
