--- a/BackChannel/app/views/layouts/application.html.erb
+++ b/BackChannel/app/views/layouts/application.html.erb
@@ -8,21 +8,36 @@
 </head>
 <body style="background-color: #f5f5dc;">
 
-<div style="text-align: right; font-size: 15px;">
-  <% if current_user %>
-      <i>Welcome, <%= current_user.username %></i>
-      <% if admin_user? %>
-          <%= link_to "Admin Tools", admin_path %> |
-       <% end %>
-      <%= link_to "Edit Profile", edit_user_path(current_user.id) %> |
-      <%= link_to "Logout", logout_path %>
-  <% else %>
-      <%= link_to "Register", new_user_path %> |
-      <%= link_to "Login", login_path %> |
-  <% end %>
-  <%= link_to 'Search', new_search_path %>
-</div>
-<div style="text-align: center; width: 1250px; margin-top: 70px;"><h1>BackChannel Application</h1>
+
+<table width="100%">
+  <tr>
+    <td width="50%">
+      <div style="text-align: left; font-size: 15px;">
+        <% if current_user %>
+            <i>Welcome, <%= current_user.username %></i>
+        <% end %>
+      </div>
+    </td>
+    <td width="50%">
+      <div style="text-align: right; font-size: 15px;">
+        <%= link_to 'Search', new_search_path %> |
+        <% if current_user %>
+            <%= link_to "Home", posts_path %> |
+            <% if admin_user? %>
+                <%= link_to "Admin Tools", admin_path %> |
+            <% end %>
+            <%= link_to "Edit Profile", edit_user_path(current_user.id) %> |
+            <%= link_to "Logout", logout_path %>
+        <% else %>
+            <%= link_to "Register", new_user_path %> |
+            <%= link_to "Login", login_path %>
+        <% end %>
+      </div>
+    </td>
+  </tr>
+</table>
+
+<div style="text-align: center; margin-top: 70px;"><h1>BackChannel Application</h1>
 
 </div>
 
